# firestore2csv

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
